--- a/quiz-app/src/components/Auth/style.css
+++ b/quiz-app/src/components/Auth/style.css
@@ -1,4 +1,22 @@
 .login{
-    width: 100%;
-    height: 50px
+    width: 70%;
+    height: 30px
+}
+
+.redirect{
+    height:100vh;
+    background-image: url('../../images/sideimage.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow-x: hidden;
+}
+
+.forbidden{
+    height:100vh;
+    background-image: url('../../images/forbidden.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow-x: hidden;
 }
