--- a/quiz-app/src/components/Alert/style.css
+++ b/quiz-app/src/components/Alert/style.css
@@ -1,11 +1,6 @@
-.login{
-    width: 70%;
-    height: 30px
-}
-
-.redirect{
+.forbidden{
     height:100vh;
-    background-image: url('../../images/sideimage.png');
+    background-image: url('../../images/forbidden.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
